# 6DOF_manipulator

./: CMakeLists.txt  README.md  Robotics.cpp  Robotics.h  actuate_basic.cpp  actuate_robotics.cpp  main.cpp  position_velocity.cpp  velocity_test.csv
3D_model/solidworks/: final.SLDASM  model_pvc-dohyeon.SLDASM  model_pvc.SLDASM
3D_model/solidworks/PART/DAE_PVC/: base_link.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae
3D_model/solidworks/PART/LINK0/: XM_540_idle.SLDASM  car_link0.SLDASM  link0_0.SLDPRT  link0_with_motor0.SLDASM  link3_3.SLDPRT  link3_3_fix.STL  link3_5.SLDPRT  mount_for_car.SLDPRT
3D_model/solidworks/PART/LINK1/: XM_540_idle.SLDASM  fr13_s102_link1.SLDPRT  link1_with_motor1.SLDASM  link3_2.SLDPRT  link3_2_fix.STL  link3_4.SLDPRT  link3_4_fix.STL
3D_model/solidworks/PART/LINK2/: XM_540_idle.SLDASM  fr13_h101.SLDPRT  link1.SLDASM  link1_1.SLDPRT  link1_1_ver2.SLDPRT  link1_1_ver2.STL  link1_2.SLDPRT  link2_1.SLDPRT  link2_1_ver2.SLDPRT  link2_1_ver2.STL  link2_with_motor2.SLDASM  link2_with_motor2_PVC.SLDASM
3D_model/solidworks/PART/LINK3/: fr13_h101.SLDPRT  link3_1.SLDPRT  link3_3.SLDPRT  link3_6.SLDPRT  link3_with_motor3.SLDASM
3D_model/solidworks/PART/LINK4/: fr13_s102.SLDPRT  link3_2.SLDPRT  link3_4.SLDPRT  link4_with_motor4.SLDASM
3D_model/solidworks/PART/LINK5/: XM_540_idle.SLDASM  fr13_h101.SLDPRT  link5_1.SLDPRT  link5_with_motor5.SLDASM
3D_model/urdf/: Manipulator.urdf  base_link.STL  link1.STL
motorlib/: CMakeLists.txt
motorlib/include/: Motor.h  Motor_control.h
motorlib/src/: Motor.cpp  Motor_control.cpp
(+258 files in other folders)
